# Scruffy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: portal-research.md  project-handoff.md
eval/: cases.json
portals/: README.md
scripts/: dump_observation.py  run_agent.py  run_eval.py  run_fixturebench_smoke.py  scrape_buyer_portal.py  scrape_practice_site.py  test_ollama.py
src/scruffy/: __init__.py  fixturebench_agent.py
src/scruffy/agent/: __init__.py  executor.py  loop.py  loop_guard.py  models.py
src/scruffy/browser/: __init__.py  buyer_portal.py  config.py  extractors.py  observation.py  runner.py  scraper.py
src/scruffy/eval/: __init__.py  cases.py  models.py  portal.py  report.py  runner.py  scorer.py
src/scruffy/llm/: __init__.py  actions.py  client.py  config.py  prompts.py
src/scruffy/models/: __init__.py  observation.py  po.py
tests/: conftest.py  test_agent_executor.py  test_agent_loop.py  test_buyer_portal_scrape.py  test_buyer_portal_v2_scrape.py  test_buyer_portal_v3_scrape.py  test_eval.py  test_loop_guard.py  test_observation.py  test_ollama_integration.py  test_practice_scrape.py
tests/fixtures/: observation_orders_page.json
