[project]
name = "scruffy"
version = "0.1.0"
description = "B2B agentic automation — replacing the Human API in order ingestion"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "playwright>=1.49.0",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-playwright>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scruffy"]

[tool.hatch.build.targets.wheel.force-include]
"src/scruffy" = "scruffy"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
